[gd_scene load_steps=6 format=2]

[ext_resource path="res://2pmain.gd" type="Script" id=1]
[ext_resource path="res://2pplayfield.gd" type="Script" id=2]
[ext_resource path="res://assets/background.png" type="Texture" id=3]
[ext_resource path="res://cell.tscn" type="PackedScene" id=4]
[ext_resource path="res://2pstatus.tscn" type="PackedScene" id=5]

[node name="main" type="Control" groups=[
"main",
]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="reticule_space" type="Control" parent="." groups=[
"reticule_space",
]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 212.0
margin_bottom = 212.0
mouse_filter = 2

[node name="level_timer" type="Timer" parent="." groups=[
"level_timer",
]]
wait_time = 5.0
one_shot = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
autostart = true

[node name="playfield" type="Control" parent="."]
editor/display_folded = true
margin_top = 214.0
margin_right = 600.0
margin_bottom = 814.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 600, 600 )
mouse_filter = 1
size_flags_horizontal = 3
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="playfield"]
modulate = Color( 0.137255, 0.137255, 0.137255, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 3 )
expand = true

[node name="GridContainer" type="GridContainer" parent="playfield" groups=[
"grid",
]]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 6.0
margin_right = 6.0
margin_bottom = 6.0
columns = 11

[node name="cell" parent="playfield/GridContainer" groups=[
"cell0",
] instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 50.0
margin_bottom = 50.0

[node name="cell2" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 54.0
margin_right = 104.0
margin_bottom = 50.0

[node name="cell3" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 108.0
margin_right = 158.0
margin_bottom = 50.0

[node name="cell4" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 162.0
margin_right = 212.0
margin_bottom = 50.0

[node name="cell5" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 216.0
margin_right = 266.0
margin_bottom = 50.0

[node name="cell6" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 270.0
margin_right = 320.0
margin_bottom = 50.0

[node name="cell7" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 324.0
margin_right = 374.0
margin_bottom = 50.0

[node name="cell8" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 378.0
margin_right = 428.0
margin_bottom = 50.0

[node name="cell9" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 432.0
margin_right = 482.0
margin_bottom = 50.0

[node name="cell10" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 486.0
margin_right = 536.0
margin_bottom = 50.0

[node name="cell11" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 540.0
margin_right = 590.0
margin_bottom = 50.0

[node name="cell12" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 54.0
margin_right = 50.0
margin_bottom = 104.0

[node name="cell13" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 54.0
margin_top = 54.0
margin_right = 104.0
margin_bottom = 104.0

[node name="cell14" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 108.0
margin_top = 54.0
margin_right = 158.0
margin_bottom = 104.0

[node name="cell15" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 162.0
margin_top = 54.0
margin_right = 212.0
margin_bottom = 104.0

[node name="cell16" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 216.0
margin_top = 54.0
margin_right = 266.0
margin_bottom = 104.0

[node name="cell17" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 270.0
margin_top = 54.0
margin_right = 320.0
margin_bottom = 104.0

[node name="cell18" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 324.0
margin_top = 54.0
margin_right = 374.0
margin_bottom = 104.0

[node name="cell19" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 378.0
margin_top = 54.0
margin_right = 428.0
margin_bottom = 104.0

[node name="cell20" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 432.0
margin_top = 54.0
margin_right = 482.0
margin_bottom = 104.0

[node name="cell21" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 486.0
margin_top = 54.0
margin_right = 536.0
margin_bottom = 104.0

[node name="cell22" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 540.0
margin_top = 54.0
margin_right = 590.0
margin_bottom = 104.0

[node name="cell23" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 108.0
margin_right = 50.0
margin_bottom = 158.0

[node name="cell24" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 54.0
margin_top = 108.0
margin_right = 104.0
margin_bottom = 158.0

[node name="cell25" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 108.0
margin_top = 108.0
margin_right = 158.0
margin_bottom = 158.0

[node name="cell26" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 162.0
margin_top = 108.0
margin_right = 212.0
margin_bottom = 158.0

[node name="cell27" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 216.0
margin_top = 108.0
margin_right = 266.0
margin_bottom = 158.0

[node name="cell28" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 270.0
margin_top = 108.0
margin_right = 320.0
margin_bottom = 158.0

[node name="cell29" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 324.0
margin_top = 108.0
margin_right = 374.0
margin_bottom = 158.0

[node name="cell30" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 378.0
margin_top = 108.0
margin_right = 428.0
margin_bottom = 158.0

[node name="cell31" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 432.0
margin_top = 108.0
margin_right = 482.0
margin_bottom = 158.0

[node name="cell32" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 486.0
margin_top = 108.0
margin_right = 536.0
margin_bottom = 158.0

[node name="cell33" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 540.0
margin_top = 108.0
margin_right = 590.0
margin_bottom = 158.0

[node name="cell34" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 162.0
margin_right = 50.0
margin_bottom = 212.0

[node name="cell35" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 54.0
margin_top = 162.0
margin_right = 104.0
margin_bottom = 212.0

[node name="cell36" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 108.0
margin_top = 162.0
margin_right = 158.0
margin_bottom = 212.0

[node name="cell37" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 162.0
margin_top = 162.0
margin_right = 212.0
margin_bottom = 212.0

[node name="cell38" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 216.0
margin_top = 162.0
margin_right = 266.0
margin_bottom = 212.0

[node name="cell39" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 270.0
margin_top = 162.0
margin_right = 320.0
margin_bottom = 212.0

[node name="cell40" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 324.0
margin_top = 162.0
margin_right = 374.0
margin_bottom = 212.0

[node name="cell41" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 378.0
margin_top = 162.0
margin_right = 428.0
margin_bottom = 212.0

[node name="cell42" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 432.0
margin_top = 162.0
margin_right = 482.0
margin_bottom = 212.0

[node name="cell43" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 486.0
margin_top = 162.0
margin_right = 536.0
margin_bottom = 212.0

[node name="cell44" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 540.0
margin_top = 162.0
margin_right = 590.0
margin_bottom = 212.0

[node name="cell45" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 216.0
margin_right = 50.0
margin_bottom = 266.0

[node name="cell46" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 54.0
margin_top = 216.0
margin_right = 104.0
margin_bottom = 266.0

[node name="cell47" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 108.0
margin_top = 216.0
margin_right = 158.0
margin_bottom = 266.0

[node name="cell48" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 162.0
margin_top = 216.0
margin_right = 212.0
margin_bottom = 266.0

[node name="cell49" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 216.0
margin_top = 216.0
margin_right = 266.0
margin_bottom = 266.0

[node name="cell50" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 270.0
margin_top = 216.0
margin_right = 320.0
margin_bottom = 266.0

[node name="cell51" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 324.0
margin_top = 216.0
margin_right = 374.0
margin_bottom = 266.0

[node name="cell52" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 378.0
margin_top = 216.0
margin_right = 428.0
margin_bottom = 266.0

[node name="cell53" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 432.0
margin_top = 216.0
margin_right = 482.0
margin_bottom = 266.0

[node name="cell54" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 486.0
margin_top = 216.0
margin_right = 536.0
margin_bottom = 266.0

[node name="cell55" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 540.0
margin_top = 216.0
margin_right = 590.0
margin_bottom = 266.0

[node name="cell56" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 270.0
margin_right = 50.0
margin_bottom = 320.0

[node name="cell57" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 54.0
margin_top = 270.0
margin_right = 104.0
margin_bottom = 320.0

[node name="cell58" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 108.0
margin_top = 270.0
margin_right = 158.0
margin_bottom = 320.0

[node name="cell59" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 162.0
margin_top = 270.0
margin_right = 212.0
margin_bottom = 320.0

[node name="cell60" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 216.0
margin_top = 270.0
margin_right = 266.0
margin_bottom = 320.0

[node name="cell61" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 270.0
margin_top = 270.0
margin_right = 320.0
margin_bottom = 320.0

[node name="cell62" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 324.0
margin_top = 270.0
margin_right = 374.0
margin_bottom = 320.0

[node name="cell63" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 378.0
margin_top = 270.0
margin_right = 428.0
margin_bottom = 320.0

[node name="cell64" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 432.0
margin_top = 270.0
margin_right = 482.0
margin_bottom = 320.0

[node name="cell65" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 486.0
margin_top = 270.0
margin_right = 536.0
margin_bottom = 320.0

[node name="cell66" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 540.0
margin_top = 270.0
margin_right = 590.0
margin_bottom = 320.0

[node name="cell67" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 324.0
margin_right = 50.0
margin_bottom = 374.0

[node name="cell68" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 54.0
margin_top = 324.0
margin_right = 104.0
margin_bottom = 374.0

[node name="cell69" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 108.0
margin_top = 324.0
margin_right = 158.0
margin_bottom = 374.0

[node name="cell70" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 162.0
margin_top = 324.0
margin_right = 212.0
margin_bottom = 374.0

[node name="cell71" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 216.0
margin_top = 324.0
margin_right = 266.0
margin_bottom = 374.0

[node name="cell72" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 270.0
margin_top = 324.0
margin_right = 320.0
margin_bottom = 374.0

[node name="cell73" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 324.0
margin_top = 324.0
margin_right = 374.0
margin_bottom = 374.0

[node name="cell74" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 378.0
margin_top = 324.0
margin_right = 428.0
margin_bottom = 374.0

[node name="cell75" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 432.0
margin_top = 324.0
margin_right = 482.0
margin_bottom = 374.0

[node name="cell76" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 486.0
margin_top = 324.0
margin_right = 536.0
margin_bottom = 374.0

[node name="cell77" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 540.0
margin_top = 324.0
margin_right = 590.0
margin_bottom = 374.0

[node name="cell78" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 378.0
margin_right = 50.0
margin_bottom = 428.0

[node name="cell79" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 54.0
margin_top = 378.0
margin_right = 104.0
margin_bottom = 428.0

[node name="cell80" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 108.0
margin_top = 378.0
margin_right = 158.0
margin_bottom = 428.0

[node name="cell81" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 162.0
margin_top = 378.0
margin_right = 212.0
margin_bottom = 428.0

[node name="cell82" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 216.0
margin_top = 378.0
margin_right = 266.0
margin_bottom = 428.0

[node name="cell83" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 270.0
margin_top = 378.0
margin_right = 320.0
margin_bottom = 428.0

[node name="cell84" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 324.0
margin_top = 378.0
margin_right = 374.0
margin_bottom = 428.0

[node name="cell85" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 378.0
margin_top = 378.0
margin_right = 428.0
margin_bottom = 428.0

[node name="cell86" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 432.0
margin_top = 378.0
margin_right = 482.0
margin_bottom = 428.0

[node name="cell87" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 486.0
margin_top = 378.0
margin_right = 536.0
margin_bottom = 428.0

[node name="cell88" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 540.0
margin_top = 378.0
margin_right = 590.0
margin_bottom = 428.0

[node name="cell89" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 432.0
margin_right = 50.0
margin_bottom = 482.0

[node name="cell90" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 54.0
margin_top = 432.0
margin_right = 104.0
margin_bottom = 482.0

[node name="cell91" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 108.0
margin_top = 432.0
margin_right = 158.0
margin_bottom = 482.0

[node name="cell92" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 162.0
margin_top = 432.0
margin_right = 212.0
margin_bottom = 482.0

[node name="cell93" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 216.0
margin_top = 432.0
margin_right = 266.0
margin_bottom = 482.0

[node name="cell94" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 270.0
margin_top = 432.0
margin_right = 320.0
margin_bottom = 482.0

[node name="cell95" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 324.0
margin_top = 432.0
margin_right = 374.0
margin_bottom = 482.0

[node name="cell96" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 378.0
margin_top = 432.0
margin_right = 428.0
margin_bottom = 482.0

[node name="cell97" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 432.0
margin_top = 432.0
margin_right = 482.0
margin_bottom = 482.0

[node name="cell98" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 486.0
margin_top = 432.0
margin_right = 536.0
margin_bottom = 482.0

[node name="cell99" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 540.0
margin_top = 432.0
margin_right = 590.0
margin_bottom = 482.0

[node name="cell100" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 486.0
margin_right = 50.0
margin_bottom = 536.0

[node name="cell101" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 54.0
margin_top = 486.0
margin_right = 104.0
margin_bottom = 536.0

[node name="cell102" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 108.0
margin_top = 486.0
margin_right = 158.0
margin_bottom = 536.0

[node name="cell103" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 162.0
margin_top = 486.0
margin_right = 212.0
margin_bottom = 536.0

[node name="cell104" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 216.0
margin_top = 486.0
margin_right = 266.0
margin_bottom = 536.0

[node name="cell105" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 270.0
margin_top = 486.0
margin_right = 320.0
margin_bottom = 536.0

[node name="cell106" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 324.0
margin_top = 486.0
margin_right = 374.0
margin_bottom = 536.0

[node name="cell107" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 378.0
margin_top = 486.0
margin_right = 428.0
margin_bottom = 536.0

[node name="cell108" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 432.0
margin_top = 486.0
margin_right = 482.0
margin_bottom = 536.0

[node name="cell109" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 486.0
margin_top = 486.0
margin_right = 536.0
margin_bottom = 536.0

[node name="cell110" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 540.0
margin_top = 486.0
margin_right = 590.0
margin_bottom = 536.0

[node name="cell111" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 540.0
margin_right = 50.0
margin_bottom = 590.0

[node name="cell112" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 54.0
margin_top = 540.0
margin_right = 104.0
margin_bottom = 590.0

[node name="cell113" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 108.0
margin_top = 540.0
margin_right = 158.0
margin_bottom = 590.0

[node name="cell114" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 162.0
margin_top = 540.0
margin_right = 212.0
margin_bottom = 590.0

[node name="cell115" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 216.0
margin_top = 540.0
margin_right = 266.0
margin_bottom = 590.0

[node name="cell116" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 270.0
margin_top = 540.0
margin_right = 320.0
margin_bottom = 590.0

[node name="cell117" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 324.0
margin_top = 540.0
margin_right = 374.0
margin_bottom = 590.0

[node name="cell118" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 378.0
margin_top = 540.0
margin_right = 428.0
margin_bottom = 590.0

[node name="cell119" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 432.0
margin_top = 540.0
margin_right = 482.0
margin_bottom = 590.0

[node name="cell120" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 486.0
margin_top = 540.0
margin_right = 536.0
margin_bottom = 590.0

[node name="cell121" parent="playfield/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 540.0
margin_top = 540.0
margin_right = 590.0
margin_bottom = 590.0

[node name="ship_space" type="Control" parent="playfield" groups=[
"ship_space",
]]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
alignment = 1

[node name="Control" type="Control" parent="VBoxContainer"]
margin_right = 600.0
margin_bottom = 208.0
size_flags_vertical = 3

[node name="ColorRect2" type="ColorRect" parent="VBoxContainer/Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="p1status2" parent="VBoxContainer/Control" instance=ExtResource( 5 )]
margin_left = 600.0
margin_top = 208.0
margin_right = 600.0
margin_bottom = 208.0
rect_rotation = 180.0
playerno = 1

[node name="Control2" type="Control" parent="VBoxContainer"]
margin_top = 212.0
margin_right = 600.0
margin_bottom = 812.0
rect_min_size = Vector2( 0, 600 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="p1status" parent="VBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 816.0
margin_right = 600.0
margin_bottom = 1024.0

[connection signal="timeout" from="level_timer" to="." method="_on_level_timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="ready" from="playfield" to="." method="_on_playfield_ready"]
[connection signal="ready" from="playfield/GridContainer" to="playfield" method="_on_GridContainer_ready"]
